<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="expand">Expand Menu</string>
    <string name="item_add">Add</string>
    <string name="item_edit">Edit</string>
    <string name="item_delete">Delete</string>
    <string name="item_copy">Copy</string>
    <string name="item_paste">Paste</string>
    <string name="item_exit">Exit</string>

</resources>